--- a/frontend/k-card-photocard/k-card-photocard/style.css
+++ b/frontend/k-card-photocard/k-card-photocard/style.css
@@ -1,12 +1,15 @@
 body {
   background-color: #fedada;
-  height: 100vh;
+  height: 100%;
+  margin: 0;
+  padding: 80px;
 }
 
 .tabla-detalle {
   width: 100%;
   max-width: 400px;
   background-color: #ffffff;
+  height: 300px;
   border-radius: 16px;
   overflow: hidden;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -55,42 +58,8 @@ td:last-child {
 .color-bg {
   background-color: #2c3e50;
   padding: 20px 0 20px;
-  position: relative;
-  top: 100px;
+
   border-radius: 16px;
-}
-
-.container-imgs {
-  height: 579px;
-  width: 400px;
-  display: flex;
-  flex-direction: column;
-  padding: 25px;
-  justify-content: space-around;
-}
-
-.photocard,
-.album {
-  background-color: #ffc0cb;
-  height: 250px;
-  width: 250px;
-  border-radius: 16px;
-}
-
-#album-img,
-#photocard-img {
-  height: 175px;
-  width: 175px;
-  object-fit: contain;
-  margin-left: 37px;
-  margin-top: 20px;
-  border-radius: 8px;
-}
-
-#nombre-album,
-#nombre-photocard {
-  text-align: center;
-  color: #f8f8ff;
 }
 
 /* estilo del forms*/
@@ -158,16 +127,85 @@ button:hover {
   width: 600px;
 }
 .buttons-container {
-  position: relative;
-  top: 120px;
+  margin-top: 30px;
 }
 
-#button-photocard:hover,
-#button-album:hover {
-  text-decoration: none;
-  background-color: inherit !important;
+#container-img img {
+  height: 380px;
+  width: 380px;
+  border-radius: 8px;
 }
 
+#content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.container-button {
+  margin-top: 60px;
+  display: flex;
+  justify-content: end;
+}
+
+.container-card {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: start;
+}
+
+.card-photocard {
+  background-color: #fff8e4;
+  border-radius: 16px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  width: 220px;
+  padding: 20px;
+  text-align: center;
+}
+
+.card-photocard img {
+  width: 100px;
+  height: 100px;
+  margin: 0 60px 0 40px;
+  object-fit: contain;
+  border-radius: 8px;
+  margin-bottom: 12px;
+}
+
+.nombre-photocard {
+  font-weight: bold;
+  font-size: 16px;
+  color: #b4005a;
+  margin-bottom: 16px;
+}
+
+#button-card {
+  background-color: #ffc0cb;
+  border: none;
+  color: white;
+  font-size: 14px;
+  padding: 8px 14px;
+  margin: 6px 0;
+  border-radius: 8px;
+  cursor: pointer;
+  width: 100%;
+  transition: background-color 0.2s;
+}
+
+#button-card:hover {
+  background-color: #ff99aa;
+}
+
+#container-card {
+  margin-top: 10px;
+}
+
+.title-photocard {
+  color: #d9488e;
+  font-size: 20px;
+}
 /*nav style*/
 .color {
   background-color: #ffc0cb;
