--- a/frontend/Pagina-de-usuario/k-card-inicio/style.css
+++ b/frontend/Pagina-de-usuario/k-card-inicio/style.css
@@ -37,3 +37,15 @@ body,
 a:hover {
   background-color: #ff99aa;
 }
+
+.navbar-end {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-right: 10px;
+}
+
+.user-icon {
+  height: 30px;
+  width: 30px;
+}
